--- a/ssb-app-server/package.json
+++ b/ssb-app-server/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
+    "neo4j-driver": "^4.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
