--- a/ssb-app-server/package.json
+++ b/ssb-app-server/package.json
@@ -7,5 +7,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   }
 }
