updated app.yaml path in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
           # GAE variables to be written to the app.yaml file
           #gae_variables: # optional
           # Path to the app.yml, Defaults to ./app.yml
-          #gae_config_path: # optional
+          gae_config_path: ./ssb-app-server/app.yaml
