--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         uses: google-github-actions/deploy-appengine@main
         with:
           credentials: ${{ secrets.GCP_JSON_CREDENTIALS }}
-          working_directory: ./ssb-app-server
+          working_directory: ssb-app-server
