--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
       - uses: actions/checkout@v2
         env:
           ENV_INFO: ${{ secrets.APP_SERVER_ENV }}
-        run: |
+
+      - run: |
           touch .env
           echo $ENV_INFO > ./ssb-app-server/.env
           cat .env
