--- a/ssb-app-server/package.json
+++ b/ssb-app-server/package.json
@@ -3,10 +3,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
-    "neo4j-driver": "^4.2.2"
+    "neo4j-driver": "^4.2.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "@types/swagger-ui-express": "^4.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
