--- a/ssb-app-server/package.json
+++ b/ssb-app-server/package.json
@@ -71,7 +71,8 @@
     "jsonfile": "^6.1.0",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
-    "neo4j-driver": "^4.2.3"
+    "neo4j-driver": "^4.2.3",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
@@ -84,6 +85,7 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
