--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /ssb-app-server/node_modules
+ssb-app-server/dist
 ssb-app-server/.env
 ssb-app-server/src/pre-start/env/development.env
 ssb-app-server/src/pre-start/env/production.env
 ssb-app-server/src/pre-start/env/test.env
+ssb-app-server/jet-logger.log
