--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,8 @@ jobs:
           ENV_INFO: ${{ secrets.APP_SERVER_ENV }}
         run: |
           echo "$ENV_INFO"
-          touch ./ssb-app-server/.env
-          echo "${{ secrets.APP_SERVER_ENV }}" > ./ssb-app-server/.env
+          touch ./ssb-app-server/src/pre-start/env/production.env
+          echo "${{ secrets.APP_SERVER_ENV }}" > ./ssb-app-server/src/pre-start/env/production.env
           cat ./ssb-app-server/.env
 
       - name: Deploy application
