Github action now create env folder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
           ENV_INFO: ${{ secrets.APP_SERVER_ENV }}
         run: |
           echo "$ENV_INFO"
+          mkdir ./ssb-app-server/src/pre-start/env
           touch ./ssb-app-server/src/pre-start/env/production.env
           echo "${{ secrets.APP_SERVER_ENV }}" > ./ssb-app-server/src/pre-start/env/production.env
           cat ./ssb-app-server/.env
