--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,11 @@ jobs:
           mkdir ./ssb-app-server/src/pre-start/env
           touch ./ssb-app-server/src/pre-start/env/production.env
           echo "${{ secrets.APP_SERVER_ENV }}" > ./ssb-app-server/src/pre-start/env/production.env
+          
+      - name: Build app
+        run:
+          npm run build
+          echo 'App built'
 
       - name: Deploy application
         id: deploy
