cd to ssb-app-server before build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
           
       - name: Build app
         run:
+          cd ./ssb-app-server
           npm run build
           echo 'App built'
 
