--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           echo "${{ secrets.APP_SERVER_ENV }}" > ./ssb-app-server/src/pre-start/env/production.env
           
       - name: Build app
-        run:
+        run: |
           cd ./ssb-app-server
           npm run build
           echo 'App built'
