--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Build app
         run: |
           cd ./ssb-app-server
+          npm install
           npm run build
           echo 'App built'
 
