--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Build app
         run: |
+          pwd
+          ls -l
           npm run build
           cd ./ssb-app-server
           echo 'App built'
