--- a/ssb-app-server/package.json
+++ b/ssb-app-server/package.json
@@ -2,7 +2,7 @@
   "name": "ssb-app-server",
   "version": "0.0.0",
   "scripts": {
-    "build": "./node_modules/.bin/ts-node build.ts",
+    "build": "bash ./node_modules/.bin/ts-node build.ts",
     "lint": "eslint . --ext .ts",
     "start": "node -r module-alias/register ./dist --env=production",
     "start:dev": "nodemon",
@@ -81,6 +81,7 @@
     "@types/find": "^0.2.1",
     "@types/fs-extra": "^9.0.8",
     "@types/jasmine": "^3.6.7",
+    "@types/jest": "^26.0.22",
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
@@ -92,8 +93,10 @@
     "find": "^0.3.0",
     "fs-extra": "^9.1.0",
     "jasmine": "^3.7.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
